# minecraft-locales

./: .gitignore  .gitmodules  README.md  data.json  pyproject.toml  versions.json
.github/workflows/: get_all_versions.yml  update.yml
bedrock/merged/: bg_BG.json  cs_CZ.json  da_DK.json  de_DE-pocket.json  de_DE.json  el_GR.json  en_GB-pocket.json  en_GB.json  en_US-pocket.json  en_US-pocket_loc_handoff.json  en_US.json  es_ES-pocket.json  es_ES.json  es_MX-pocket.json  es_MX.json  fi_FI.json  fr_CA-pocket.json  fr_CA.json  fr_FR-pocket.json  fr_FR.json  hu_HU.json  id_ID.json  it_IT-pocket.json  it_IT.json  ja_JP-pocket.json  ja_JP.json  ko_KR-pocket.json  ko_KR.json  nb_NO.json  nl_NL.json  pl_PL.json  pt_BR-pocket.json  pt_BR.json  pt_PT-pocket.json  pt_PT.json  ru_RU-pocket.json  ru_RU.json  sk_SK.json  sv_SE.json  tr_TR.json  (+5 more)
java/old/: af_ZA.json  ar_SA.json  ast_ES.json  az_AZ.json  be_BY.json  bg_BG.json  br_FR.json  bs_ba.json  ca_ES.json  cs_CZ.json  cy_GB.json  da_DK.json  de_AT.json  de_DE.json  de_alg.json  de_ch.json  el_GR.json  en_AU.json  en_CA.json  en_GB.json  en_NZ.json  en_PT.json  en_UD.json  en_US.json  en_US.lang  en_ws.json  eo_UY.json  es_AR.json  es_ES.json  es_MX.json  es_UY.json  es_VE.json  es_cl.json  et_EE.json  eu_ES.json  fa_IR.json  fi_FI.json  fil_PH.json  fo_FO.json  fr_CA.json  (+73 more)
scripts/: bedrock_extract.py  bedrock_merge.py  convert.py  get_all_versions.py  java_update.py
scripts/bedrock/: UWP_request.xml  convert.py  extract.py  merge.py
scripts/java/: update.py
tools/: extract_cik.py  get_all_versions.py
(+2821 files in other folders)
