[project]
name = "minecraft-locales"
version = "0.1.0"
description = "Automatically updates Minecraft in-game language files (both Java Edition and Bedrock Edition)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "orjson>=3.9.0",
    "qiling>=1.4.6",
]
