[project]
name = "minecraft-locales"
version = "0.1.0"
description = "Automatically updates Minecraft in-game language files (both Java Edition and Bedrock Edition)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mclang",
    "orjson",
    "qiling",
    "requests",
    "urllib3",
]
